--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 
 <% if @users %>
     <% @users.each do |user| %>
-        <%= user.first_name%> <%= user.last_name%> <br>
+        <%= user.full_name %> <br>
     <%end%>
     <%else%>
         <p>There are no users at this time.</p>
