added render partial user to user.index

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 
 <% if @users %>
     <% @users.each do |user| %>
-        <%= user.full_name %> <br>
+        <%= render 'user', :user => user %> <br>
     <%end%>
     <%else%>
         <p>There are no users at this time.</p>
