--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,5 +1,7 @@
-<%= form_for @item do |f| %>
-    <%= f.text_field :name %>
+
+
+<%= form_for(@item) do |f| %>
+    Name: <%= f.text_field :name %>
     <%= f.text_field :category %>
     <%= f.text_field :price %>
     <%= f.text_field :description %>
@@ -11,4 +13,18 @@
 <%end%>
 
 <%=@user.id %>
+
+
+<script type="text/javascript">
+    $('form').submit(function(e) {
+        e.preventDefault()
+        var values = $(this).serialize();
+        console.log(values)
+        posting = $.post('/items', values)
+        posting.done(function(values) {
+            console.log(values)
+        })
+    })
+</script>
+
 
