--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,8 +6,11 @@
 <button id="add-item-button">Add Items</button>
 
 
-
-<div id="add-item-form"></div>
+<br>
+<br>
+<br>
+<br>
+<div id="add-item-form" class='add-item-form'></div>
 
 <script type="text/javascript">
     $('#add-item-button').click(function() {
