added devise gem and added sales list item div to user#show view page

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -22,7 +22,8 @@
         const id = $('.user-id').val()
         posting = $.post('/users/'+id+'/items', values)
         posting.done(function(values) {
-            console.log(values)
+            const item = values["name"]
+            $('#user-listed-items').append(`<p>${item}</p>`)
         })
     })
 </script>
