--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,12 @@
 
 
-<%= @user.full_name %>
+<%= @user.email %>
+
+<div id="user-listed-items">
+
+</div>
+
+
 
 
 <button id="add-item-button">Add Items</button>
