changed root#index route & view

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -10,7 +10,7 @@
         <div class="add-button"></div>
 <% end %>
 
-
+<%= @currentUserId %>
 
 <button id="shop-button">Start shopping</button>
 <div id="shopping-bag"></div>
