--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,8 +2,9 @@
 
 
 <% if @users %>
+    <h2>Our Members</h2>
     <% @users.each do |user| %>
-        <%= link_to user.email, user_path(user) %> <br>
+        <%= user.email %> <br>
     <%end%>
     <%else%>
         <p>There are no users at this time.</p>
