button click event added to get item_id for item#index views

--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -2,8 +2,20 @@
 
 
 <div id="shopping-container">
-    <h1>SHOPPING BAG</h1>
+    <h2>YOUR SHOPPING BAG</h2>
 
 
+    <div id="shopping-bag-items"></div>
+
+
+
+    <button id="place-order-button">Place Order</button>
 
 </div>
+
+
+<script type="text/javascript">
+    $('#place-order-button').click(function() {
+        console.log("clicking button")
+    })
+</script>
