--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -7,7 +7,11 @@
 
     <div id="shopping-bag-items"></div>
 
-
+    <%= form_for @invoice do |f| %>
+        <%= f.hidden_field :item[:id] %>
+        <%= f.hidden_field :buyer_id, @current_user_id %>
+        <%= f.submit %>
+    <% end %>
 
     <button id="place-order-button">Place Order</button>
 
@@ -15,7 +19,8 @@
 
 
 <script type="text/javascript">
-    $('#place-order-button').click(function() {
+    $('form').submit(function(e) {
+        e.preventDefault()
         console.log("clicking button")
     })
 </script>
